# crabby

./: Cargo.toml  justfile
common/: Cargo.toml
common/src/: lib.rs
common/src/constants/: websocket.rs
common/src/types/: position.rs
common/src/user/: user_state.rs
server/: Cargo.toml
server/src/: constants.rs  main.rs  positions.rs  server_state.rs  websocket.rs
server/src/websocket/: mod.rs  state.rs
web/: Cargo.toml  package-lock.json  tailwind.config.js
web/assets/: tailwind.css
web/src/: main.rs  websocket.rs
web/src/components/: crab.rs
web/src/hooks/: mod.rs  use_cursor.rs
web/src/workers/: mod.rs  sync_local_state.rs  sync_server_state.rs
