[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
common = { version = "0.1.0", path = "../common" }
futures-util = "0.3.31"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = { version = "0.26.2" }
uuid = { version = "1.16.0", features = ["v4"] }

