[package]
name = "web"
version = "0.1.0"
authors = ["max-taylor <39660195+max-taylor@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
dioxus = { version = "0.6.0", features = ["router"] }
futures = "0.3.31"
gloo-net = { version = "0.6.0", features = ["websocket"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
