[package]
name = "web"
version = "0.1.0"
authors = ["max-taylor <39660195+max-taylor@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-use-cursor = "=0.2.0"
futures = "0.3.31"
gloo-net = { version = "0.6.0", features = ["websocket"] }
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
wasm-bindgen = "0.2.100"
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = "0.3.77"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
